<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/my_nanodegree_app"
        android:textColor="@color/accent_material_light"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:background="@color/button_material_dark"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_margin="8dp"
        android:onClick="displayToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:background="@color/button_material_dark"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_margin="8dp"
        android:onClick="displayToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:background="@color/button_material_dark"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_margin="8dp"
        android:onClick="displayToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:background="@color/button_material_dark"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_margin="8dp"
        android:onClick="displayToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:id="@+id/button5"
        android:background="@color/button_material_dark"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_margin="8dp"
        android:onClick="displayToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:background="#ff1006ff"
        android:textColor="#ff8fffbb"
        android:layout_margin="8dp"
        android:onClick="displayToast" />


</LinearLayout>

